# TP7-CMake

./: README.md
calculatrice/: .gitignore  CMakeLists.txt
calculatrice/src/app/: main.c
calculatrice/src/lib/dynamicCalculatrice/: CMakeLists.txt  dynamic_calculatrice.c  dynamic_calculatrice.h
calculatrice/src/lib/staticCalculatrice/: CMakeLists.txt  static_calculatrice.c  static_calculatrice.h
docs/: README.md
